--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 
     <!-- Links to other branches of EGGCSS and Affliate Companies -->
     <div class="flex flex-col md:flex-row gap-5 mt-6 justify-center items-center text-white">
-        <a  href="http://shuaamisr.com/" target="_blank" class="h-20 w-52 bg-gray-700 hover:bg-black hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
+        <a  href="http://shuaamisr.com/" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
             Food Processing
         </a>
 
-        <a href="energy_website/energy.html" target="blank" class="h-20 w-52 bg-gray-700 hover:bg-black hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
+        <a href="energy_website/energy.html" target="blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
             Energy
         </a>
 
-        <a href="http://egcss.net" target="_blank" class="h-20 w-52 bg-gray-700 hover:bg-black hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect whitespace-nowrap lg:h-30 lg:w-42">
+        <a href="http://egcss.net" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect whitespace-nowrap lg:h-30 lg:w-42">
             International Trade
         </a>
 
-        <a href="egcss_pages/index.html" target="_blank" class="h-20 w-52 bg-gray-700 hover:bg-black hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
+        <a href="egcss_pages/index.html" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
             Logistics
         </a>
     </div>
@@ -52,9 +52,9 @@
 
     <footer class="bg-black w-full mt-16">
         <div class="flex flex-col md:flex-row justify-center items-center gap-4 text-2xl text-white py-12">
-            <h1 id="copyText" onclick="copyToClipboard()" class="px-4 hover:text-indigo-500 cursor-pointer hover:underline">inquiry@shuaamisr.com</h1>
+            <h1 id="copyText" onclick="copyToClipboard()" class="px-4 hover:text-blue-500 cursor-pointer hover:underline">inquiry@shuaamisr.com</h1>
             <h1 class="px-2 ">|<h1>
-            <h1 id="copyText2" onclick="copyToClipboard2()" class="px-4 hover:text-indigo-500 cursor-pointer hover:underline">(+20) 1003046969</h1>
+            <h1 id="copyText2" onclick="copyToClipboard2()" class="px-4 hover:text-blue-500 cursor-pointer hover:underline">(+20) 1003046969</h1>
             <h1 class="px-2">|<h1>
             <h1 class="px-4">© 2017</h1>
         </div>
