--- a/egcss_pages/index.html
+++ b/egcss_pages/index.html
@@ -281,7 +281,7 @@
 
 
 
-    <section class="section scroll-link w-full min-h-screen bg-black px-5 sm:px-10">
+    <section id="contact_id" class="section scroll-link w-full min-h-screen bg-black px-5 sm:px-10">
         <div class="flex-col gap-y-8 pt-16 text-white">
             <div class="flex flex-col sm:flex-row items-center text-left gap-4">
                 <img class="h-16 w-auto" src="../Images/paper_Form.svg" alt="Form Icon">
@@ -346,7 +346,7 @@
 
 
     <!-- Section 4 - Contact Us -->
-    <footer id="contact_id" class="section scroll-link w-full h-screen bg-black">
+    <footer id="footer_id" class="section scroll-link w-full h-screen bg-black">
         
         <div class="flex gap-y-6">
             <div class="pt-20">
