--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Food Processing
         </a>
 
-        <a href="www.vfsa.com" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
+        <a href="http://vfsa.com/" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
             Energy
         </a>
 
