--- a/egcss_pages/index.html
+++ b/egcss_pages/index.html
@@ -67,6 +67,7 @@
                     <a href="#about_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">About Us</a>
                     <a href="#service_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Services</a>
                     <a href="#contact_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Contact Us</a>
+                    <a href="#footer_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">HQ</a>
                 </div>
             </div>
         </div>
@@ -77,6 +78,7 @@
         <a href="#about_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">About Us</a>
         <a href="#service_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">Services</a>
         <a href="#contact_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">Contact Us</a>
+        <a href="#footer_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">HQ</a>
     </div>
 
 
@@ -349,7 +351,7 @@
 
 
     <!-- Section 4 - Contact Us -->
-    <footer class="section scroll-link w-full bg-black">
+    <footer id="footer_id" class="section scroll-link w-full bg-black">
         <div class="flex flex-col md:flex-row gap-6">
             <!-- Contact Info -->
             <div class="pt-16 md:pt-20 md:w-1/2">
