--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     
 
 <!-- Website Logo SVG -->
+        <div class="w-full h-screen">
+                    
     <div class="mt-6 flex justify-center items-center">
         <img class="w-auto h-96" src="Images/smifid_logo.jpg" alt="EGCSS Pictographic Logo">
     </div>
@@ -47,6 +49,9 @@
             Logistics
         </a>
     </div>
+
+        </div>
+
 
 
 
