--- a/index.html
+++ b/index.html
@@ -24,33 +24,34 @@
     <!-- Website Image Background -->
     
 
-<!-- Website Logo SVG -->
-        <div class="w-full h-screen">
-                    
-    <div class="mt-6 flex justify-center items-center">
-        <img class="w-auto h-96" src="Images/smifid_logo.jpg" alt="EGCSS Pictographic Logo">
-    </div>
 
-    <!-- Links to other branches of EGGCSS and Affliate Companies -->
-    <div class="flex flex-col md:flex-row gap-5 mt-6 justify-center items-center text-white">
-        <a  href="http://shuaamisr.com/" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
-            Food Processing
-        </a>
+            <!-- Website Logo SVG -->
+    <div class="w-full h-screen">
 
-        <a href="http://vfsa.site/" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
-            Energy
-        </a>
-
-        <a href="http://egcss.net" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect whitespace-nowrap lg:h-30 lg:w-42">
-            International Trade
-        </a>
-
-        <a href="egcss_pages/index.html" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
-            Logistics
-        </a>
-    </div>
-
+        <div class="mt-6 flex justify-center items-center">
+            <img class="w-auto h-96" src="Images/smifid_logo.jpg" alt="EGCSS Pictographic Logo">
         </div>
+
+        <!-- Links to other branches of EGGCSS and Affliate Companies -->
+        <div class="flex flex-col md:flex-row gap-5 mt-6 justify-center items-center text-white">
+            <a  href="http://shuaamisr.com/" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
+                Food Processing
+            </a>
+
+            <a href="energy_website/energy.html" target="blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect lg:h-30 lg:w-42">
+                Energy
+            </a>
+
+            <a href="http://egcss.net" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect whitespace-nowrap lg:h-30 lg:w-42">
+                International Trade
+            </a>
+
+            <a href="egcss_pages/index.html" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
+                Logistics
+            </a>
+        </div>
+
+    </div>
 
 
 
