--- a/energy_website/energy.html
+++ b/energy_website/energy.html
@@ -17,8 +17,9 @@
         </style>
     </head>
 
-    <body class="bg-yellow-500">
-        <h1 class="flex justify-center items-center content-center mt-32 text-6xl text-bold">WEBSITE IS UNDER CONSTRUCTION</h1>
+    <body class="bg-red-500">
+        <h1 class="flex justify-center content-center items-center mt-10 h-1/5 w-auto text-9xl">🏗</h1>
+        <h1 class="flex justify-center items-center content-center p-5 text-6xl text-bold">WEBSITE IS UNDER CONSTRUCTION</h1>
     </body>
 
 </html>
