--- a/egcss_pages/index.html
+++ b/egcss_pages/index.html
@@ -46,9 +46,11 @@
                 <!-- Logo Section -->
                 <div class="flex gap-x-2 ">
                     <h1 class="flex items-center  text-xl pl-3 mx-4">EGCSS</h1>
+                    <!--
                     <a href="home_ar.html" class="px-2 py-1 font-bold hover:bg-white hover:text-black rounded-xl">Ar</a>
                     <h1 class="px-1 py-1">|</h1>
                     <a href="index.html" class="px-2 py-1 font-bold hover:bg-white hover:text-black rounded-xl">En</a>
+                    -->
                 </div>
 
                 <!-- Hamburger Menu (Mobile) -->
@@ -103,7 +105,7 @@
     <div class="snap-container">
         <!-- Website Image Background -->
         <div class="section scroll-link relative bg-black">
-            <img src="../Images/ship_stock_img.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
+            <img src="../Images/ship_img2.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
 
         <!-- Website Logo SVG -->
         <div class="absolute inset-0">
