--- a/egcss_pages/index.html
+++ b/egcss_pages/index.html
@@ -105,7 +105,7 @@
     <div class="snap-container">
         <!-- Website Image Background -->
         <div class="section scroll-link relative bg-black">
-            <img src="../Images/ship_img2.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
+            <img src="../Images/ship_img2.jpg" class="w-full h-screen object-cover" alt="Shipping Vessal Background Image">
 
         <!-- Website Logo SVG -->
         <div class="absolute inset-0">
