--- a/egcss_pages/index.html
+++ b/egcss_pages/index.html
@@ -285,7 +285,7 @@
 
 
 
-    <section id="contact_id" class="section scroll-link w-full min-h-screen bg-white text-black px-5 sm:px-10" style="font-family: American Typewriter">
+    <section id="contact_id" class="section scroll-link w-full min-h-screen bg-white text-black px-5 sm:px-10" style="font-family: Georgie">
         <div class="flex-col gap-y-8 pt-16 ">
             <div class="flex justify-center content-center sm:flex-row items-center text-left gap-4 mt-12">
                 <div class="flex gap-x-2">
