--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 International Trade
             </a>
 
-            <a href="egcss_pages/index.html" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
+            <a href="home.html" target="_blank" class="h-20 w-52 bg-gray-800 hover:bg-blue-900 hover:opacity-90 shadow-3xl text-xl lg:text-2xl flex justify-center items-center rounded-lg pulse-effect hover:animate-pulse lg:h-30 lg:w-42">
                 Logistics
             </a>
         </div>
