--- a/home.html
+++ b/home.html
@@ -115,8 +115,8 @@
 
     
 
- <div class="overflow-hidden whitespace-nowrap relative bg-black border p-5 fixed top-0 left-0 w-full">
-    <div class="inline-block text-xl font-bold text-black bg-white marquee" style="font-family: American Typewriter">
+ <div class="overflow-hidden whitespace-nowrap relative bg-white text-black border p-5 fixed top-0 left-0 w-full">
+    <div class="inline-block text-xl font-bold text-black marquee" style="font-family: American Typewriter">
         <span class="mx-8">USA</span>
         <span class="mx-8">Canada</span>
         <span class="mx-8">UK</span>
