Update link to smiled group

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!-- Navbar Links (Hidden on Mobile by Default) -->
         <div id="menu" class="hidden md:flex justify-end space-x-4 text-[clamp(1rem, 2.5vw, 2rem)]">
-            <a href="index.html" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white" target="_blank">SMIFID Group</a>
+            <a href="https://www.shuaamisr.com" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white" target="_blank">SMIFID Group</a>
             <a href="#home_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Home</a>
             <a href="#about_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">About Us</a>
             <a href="#service_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Services</a>
