--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="flex justify-center content-center sm:flex-row items-center text-left gap-4 mt-12">
                 <div class="flex gap-x-2">
                     <img class="h-12 w-auto" src="Images/paper_Form.svg" alt="Form Icon">
-                    <h1 class="text-base xl:text-3xl md:text-4xl lg:text-xl sm:text-2xl text-black font-semibold">For Business Enquiries</h1>
+                    <h1 class="text-base xl:text-3xl md:text-4xl lg:text-xl sm:text-2xl text-black font-semibold" style="font-family: Georgie">For Business Enquiries</h1>
                 </div>
             </div>
     
