added the data for the charter vessal, intial text, will refactor code into js code and add  images later

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
         </div>
 
         <!-- Navbar Links (Hidden on Mobile by Default) -->
-        <div id="menu" class="hidden md:flex justify-end space-x-4 text-[clamp(1rem, 2.5vw, 2rem)]">
+        <nav id="menu" class="hidden md:flex justify-end space-x-4 text-[clamp(1rem, 2.5vw, 2rem)]">
             <a href="https://www.shuaamisr.com" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white" target="_blank">SMIFID Group</a>
             <a href="#home_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Home</a>
             <a href="#about_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">About Us</a>
             <a href="#service_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Services</a>
+            <a href="#charter_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Charter</a>
             <a href="#contact_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">Contact Us</a>
             <a href="#footer_id" class="px-3 py-2 font-semibold hover:text-black rounded-xl hover:bg-white">HQ</a>
-        </div>
+        </nav>
     </div>
 </div>
 
@@ -63,6 +64,7 @@
         <a href="#home_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">Home</a>
         <a href="#about_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">About Us</a>
         <a href="#service_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">Services</a>
+        <a href="#contact_id" class="block py-4 px-4 hover:text-black hover:bg-white rounded-xl">Charter</a>
         <a href="#contact_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">Contact Us</a>
         <a href="#footer_id" class="block  py-4 px-4 hover:text-black hover:bg-white rounded-xl">HQ</a>
     </div>
@@ -264,6 +266,164 @@
                     </ul>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+
+    <section id="charter_id" class="section scroll-link w-full h-auto min-h-screen bg-black text-black px-5 sm:px-10" style="font-family: Georgie">
+        <div class="max-w-4xl mx-auto">
+            <!-- Tanker Vessels Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Tanker Vessels for Sale</h2>
+
+            <!-- MR2 Tankers -->
+            <div class="mb-6">
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">MR2 Tankers</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>DWT Range:</strong> 43,000 - 50,000</li>
+                <li><strong>Build Year:</strong> 2007 to 2010</li>
+                <li><strong>Options:</strong> Pumproom & IMO 2 notation</li>
+                </ul>
+            </div>
+
+            <!-- Small Tanker -->
+            <div>
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">Small Tanker (Buyer Specs)</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>DWT Range:</strong> 9,500 - 12,000</li>
+                <li><strong>Build Year:</strong> 2003 to 2010</li>
+                <li><strong>Restrictions:</strong>
+                    <ul class="list-circle list-inside ml-4">
+                    <li>Max LOA: 122 meters</li>
+                    <li>Beam: 20-21 meters</li>
+                    <li>LOA/Beam ratio: 6:1</li>
+                    </ul>
+                </li>
+                <li><strong>Options:</strong> CPP & DPP candidates</li>
+                <li><strong>Class:</strong> IACS class</li>
+                <li><strong>Pump:</strong> Framo or Screw pumps (3 or 4 units)</li>
+                <li><strong>Generator:</strong> 3 units</li>
+                </ul>
+            </div>
+            </div>
+
+            <!-- Available Vessels Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Available Vessels for Sale</h2>
+
+            <!-- SAGAR SHAKTI -->
+            <div class="mb-6">
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">SAGAR SHAKTI</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>Type:</strong> Bulk Carrier</li>
+                <li><strong>Flag:</strong> Singapore</li>
+                <li><strong>DWT:</strong> 58,097</li>
+                <li><strong>Build Year:</strong> April 2012</li>
+                <li><strong>Builder:</strong> Tsuneishi Zhoushan, China</li>
+                <li><strong>Dimensions:</strong>
+                    <ul class="list-circle list-inside ml-4">
+                    <li>LOA: 189.99m</li>
+                    <li>Beam: 32.26m</li>
+                    <li>Draft: 12.8m</li>
+                    </ul>
+                </li>
+                <li><strong>Class:</strong> NK</li>
+                <li><strong>Grain Capacity:</strong> 72,689 m³</li>
+                <li><strong>Holds/Hatches:</strong> 5/5</li>
+                <li><strong>Engine:</strong> MAN B. & W. 6S50MC-C (11,421 BHP)</li>
+                <li><strong>Cranes:</strong> 4 x 30T</li>
+                <li><strong>Grabs:</strong> SMAG grabs installed, spare RC Tobu grab onboard</li>
+                <li><strong>BWTS:</strong> Fitted (Techcross)</li>
+                <li><strong>Location:</strong> Indonesia (inspectable)</li>
+                </ul>
+            </div>
+
+            <!-- MV EN OCEAN -->
+            <div>
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">MV EN OCEAN</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>Type:</strong> Bulk Carrier</li>
+                <li><strong>Flag:</strong> Panama</li>
+                <li><strong>DWT:</strong> 27,865</li>
+                <li><strong>Build Year:</strong> 1997</li>
+                <li><strong>Builder:</strong> Kanasashi Co. Ltd., Japan</li>
+                <li><strong>Dimensions:</strong>
+                    <ul class="list-circle list-inside ml-4">
+                    <li>LOA: 176.62m</li>
+                    <li>Beam: 26.00m</li>
+                    <li>Draft: 9.414m</li>
+                    </ul>
+                </li>
+                <li><strong>Class:</strong> NK</li>
+                <li><strong>Grain Capacity:</strong> 38,239.24 m³</li>
+                <li><strong>Bale Capacity:</strong> 37,313.27 m³</li>
+                <li><strong>Holds/Hatches:</strong> 5/5</li>
+                <li><strong>Engine:</strong> Mitsubishi 5UEC2LA</li>
+                <li><strong>Cranes:</strong> 4 x 30.5T + Grab 3</li>
+                <li><strong>BWTS:</strong> Fitted</li>
+                <li><strong>Delivery:</strong> Far East (in about 2 months)</li>
+                </ul>
+            </div>
+            </div>
+
+            <!-- MPP Vessels Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">MPP Vessels for Sale (Far East Trading)</h2>
+
+            <!-- M/V DONG AN -->
+            <div class="mb-6">
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG AN</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>Type:</strong> MPP Ship</li>
+                <li><strong>Flag:</strong> Vietnam</li>
+                <li><strong>DWT:</strong> 7,091</li>
+                <li><strong>Build Year:</strong> 1995</li>
+                <li><strong>Builder:</strong> Shin Kurushima Akitsu, Japan</li>
+                <li><strong>Dimensions:</strong>
+                    <ul class="list-circle list-inside ml-4">
+                    <li>LOA: 98.17m</li>
+                    <li>Beam: 18.8m</li>
+                    <li>Draft: 7.429m</li>
+                    </ul>
+                </li>
+                <li><strong>Class:</strong> Vietnam Register</li>
+                <li><strong>Grain Capacity:</strong> 13,790 m³</li>
+                <li><strong>Bale Capacity:</strong> 12,634 m³</li>
+                <li><strong>Holds/Hatches:</strong> 2/2</li>
+                <li><strong>Derricks:</strong> 2 x 30.0T, 2 x 25.0T</li>
+                <li><strong>Engine:</strong> Makita LS42L (3,399 BHP)</li>
+                <li><strong>Current Cargo:</strong> Rice (Vietnam to Philippines)</li>
+                <li><strong>Latest Itinerary:</strong> Discharging rice at Bataan, ETD Bataan 27 Feb</li>
+                </ul>
+            </div>
+
+            <!-- M/V DONG THINH -->
+            <div>
+                <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG THINH</h3>
+                <ul class="list-disc list-inside text-gray-600">
+                <li><strong>Type:</strong> MPP Ship</li>
+                <li><strong>Flag:</strong> Vietnam</li>
+                <li><strong>DWT:</strong> 7,088</li>
+                <li><strong>Build Year:</strong> 1994</li>
+                <li><strong>Builder:</strong> Shin Kochi, Japan</li>
+                <li><strong>Dimensions:</strong>
+                    <ul class="list-circle list-inside ml-4">
+                    <li>LOA: 98.17m</li>
+                    <li>Beam: 18.8m</li>
+                    <li>Draft: 7.429m</li>
+                    </ul>
+                </li>
+                <li><strong>Class:</strong> Vietnam Register</li>
+                <li><strong>Grain Capacity:</strong> 13,790 m³</li>
+                <li><strong>Bale Capacity:</strong> 12,634 m³</li>
+                <li><strong>Holds/Hatches:</strong> 1/2</li>
+                <li><strong>Derricks:</strong> 2 x 30.0T, 2 x 20.0T</li>
+                <li><strong>Engine:</strong> Makita LS42L (3,400 BHP)</li>
+                <li><strong>Current Cargo:</strong> Rice (Vietnam to Philippines)</li>
+                <li><strong>Latest Itinerary:</strong> Loading rice at HCM for Bataan, ETD HCM 27 Feb</li>
+                </ul>
+            </div>
             </div>
         </div>
     </section>
