changed some of the Data UI, will change later again

--- a/index.html
+++ b/index.html
@@ -338,9 +338,10 @@
                 <li><strong>Location:</strong> Indonesia (inspectable)</li>
                 </ul>
             </div>
+            </div>
 
             <!-- MV EN OCEAN -->
-            <div>
+            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">MV EN OCEAN</h3>
                 <ul class="list-disc list-inside text-gray-600">
                 <li><strong>Type:</strong> Bulk Carrier</li>
@@ -365,41 +366,44 @@
                 <li><strong>Delivery:</strong> Far East (in about 2 months)</li>
                 </ul>
             </div>
-            </div>
 
             <!-- MPP Vessels Section -->
             <div class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">MPP Vessels for Sale (Far East Trading)</h2>
 
             <!-- M/V DONG AN -->
-            <div class="mb-6">
-                <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG AN</h3>
-                <ul class="list-disc list-inside text-gray-600">
-                <li><strong>Type:</strong> MPP Ship</li>
-                <li><strong>Flag:</strong> Vietnam</li>
-                <li><strong>DWT:</strong> 7,091</li>
-                <li><strong>Build Year:</strong> 1995</li>
-                <li><strong>Builder:</strong> Shin Kurushima Akitsu, Japan</li>
-                <li><strong>Dimensions:</strong>
-                    <ul class="list-circle list-inside ml-4">
-                    <li>LOA: 98.17m</li>
-                    <li>Beam: 18.8m</li>
-                    <li>Draft: 7.429m</li>
+            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+                <div class="mb-6">
+                    <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG AN</h3>
+                    <ul class="list-disc list-inside text-gray-600">
+                    <li><strong>Type:</strong> MPP Ship</li>
+                    <li><strong>Flag:</strong> Vietnam</li>
+                    <li><strong>DWT:</strong> 7,091</li>
+                    <li><strong>Build Year:</strong> 1995</li>
+                    <li><strong>Builder:</strong> Shin Kurushima Akitsu, Japan</li>
+                    <li><strong>Dimensions:</strong>
+                        <ul class="list-circle list-inside ml-4">
+                        <li>LOA: 98.17m</li>
+                        <li>Beam: 18.8m</li>
+                        <li>Draft: 7.429m</li>
+                        </ul>
+                    </li>
+                    <li><strong>Class:</strong> Vietnam Register</li>
+                    <li><strong>Grain Capacity:</strong> 13,790 m³</li>
+                    <li><strong>Bale Capacity:</strong> 12,634 m³</li>
+                    <li><strong>Holds/Hatches:</strong> 2/2</li>
+                    <li><strong>Derricks:</strong> 2 x 30.0T, 2 x 25.0T</li>
+                    <li><strong>Engine:</strong> Makita LS42L (3,399 BHP)</li>
+                    <li><strong>Current Cargo:</strong> Rice (Vietnam to Philippines)</li>
+                    <li><strong>Latest Itinerary:</strong> Discharging rice at Bataan, ETD Bataan 27 Feb</li>
                     </ul>
-                </li>
-                <li><strong>Class:</strong> Vietnam Register</li>
-                <li><strong>Grain Capacity:</strong> 13,790 m³</li>
-                <li><strong>Bale Capacity:</strong> 12,634 m³</li>
-                <li><strong>Holds/Hatches:</strong> 2/2</li>
-                <li><strong>Derricks:</strong> 2 x 30.0T, 2 x 25.0T</li>
-                <li><strong>Engine:</strong> Makita LS42L (3,399 BHP)</li>
-                <li><strong>Current Cargo:</strong> Rice (Vietnam to Philippines)</li>
-                <li><strong>Latest Itinerary:</strong> Discharging rice at Bataan, ETD Bataan 27 Feb</li>
-                </ul>
+                </div>
+            </div>
             </div>
 
+
             <!-- M/V DONG THINH -->
-            <div>
+            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG THINH</h3>
                 <ul class="list-disc list-inside text-gray-600">
                 <li><strong>Type:</strong> MPP Ship</li>
@@ -424,7 +428,8 @@
                 <li><strong>Latest Itinerary:</strong> Loading rice at HCM for Bataan, ETD HCM 27 Feb</li>
                 </ul>
             </div>
-            </div>
+
+
         </div>
     </section>
 
