minor changes to UI

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </section>
 
 
-    <section id="charter_id" class="section scroll-link w-full h-auto min-h-screen bg-black text-black px-5 sm:px-10" style="font-family: Georgie">
+    <section id="charter_id" class="section scroll-link w-full h-auto min-h-screen text-black px-5 sm:px-10" style="font-family: Georgie">
         <div class="max-w-4xl mx-auto">
             <!-- Tanker Vessels Section -->
             <div class="bg-white p-6 rounded-lg shadow-md mb-6">
