--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <section id="charter_id" class="section scroll-link w-full h-auto min-h-screen text-black px-5 sm:px-10" style="font-family: Georgie">
         <div class="max-w-4xl mx-auto">
             <!-- Tanker Vessels Section -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <div id="Tanker_div" class="bg-white p-6 rounded-lg shadow-md mb-6">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">Tanker Vessels for Sale</h2>
 
             <!-- MR2 Tankers -->
@@ -309,7 +309,7 @@
             </div>
 
             <!-- Available Vessels Section -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <div id="vessal_div" class="bg-white p-6 rounded-lg shadow-md mb-6">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">Available Vessels for Sale</h2>
 
             <!-- SAGAR SHAKTI -->
@@ -341,7 +341,7 @@
             </div>
 
             <!-- MV EN OCEAN -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <div id="Mv_En_div" class="bg-white p-6 rounded-lg shadow-md mb-6">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">MV EN OCEAN</h3>
                 <ul class="list-disc list-inside text-gray-600">
                 <li><strong>Type:</strong> Bulk Carrier</li>
@@ -368,12 +368,12 @@
             </div>
 
             <!-- MPP Vessels Section -->
-            <div class="bg-white p-6 rounded-lg shadow-md">
+            <div id="MPP_Vess_div" class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">MPP Vessels for Sale (Far East Trading)</h2>
             </div>
 
             <!-- M/V DONG AN -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <div id="MV_Dong_div" class="bg-white p-6 rounded-lg shadow-md mb-6">
                 <div class="mb-6">
                     <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG AN</h3>
                     <ul class="list-disc list-inside text-gray-600">
@@ -403,7 +403,7 @@
 
 
             <!-- M/V DONG THINH -->
-            <div class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <div id="Dong_Thi_div" class="bg-white p-6 rounded-lg shadow-md mb-6">
                 <h3 class="text-xl font-semibold text-gray-700 mb-2">M/V DONG THINH</h3>
                 <ul class="list-disc list-inside text-gray-600">
                 <li><strong>Type:</strong> MPP Ship</li>
