--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
     <section id="charter_id" class="relative w-full h-screen overflow-hidden bg-white" style="font-family: Georgie">
          <!-- absolute inset-0 object-cover w-full h-full md:h-[150vh] opacity-40 -->
-        <img src="Images/vessal_main.jpg" class="absolute inset-0 object-cover w-full md:h-[150vh] ">
+        <img src="Images/vessal_5.jpeg" class="absolute inset-0 object-cover w-full md:h-[150vh] ">
         <!-- Carousel Container -->
         <div class="relative h-full">
             <!-- Slides Container -->
