finished remaking the UI of the egcss page, Now i need to include the video in the hero and ensure that the image links work as intended

--- a/archieve.html
+++ b/archieve.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="png" href="../Images/egcss_logo_2.svg">
+        <link rel="icon" type="png" href="../static/Images/egcss_logo_2.svg">
         <script src="../logic.js"></script>
         <style>
             html, body {
@@ -44,12 +44,13 @@
     
             <!-- Logo Section -->
             <div class="flex gap-x-2 text-white">
+                <img src="static/Images/egcss_logo.svg" class="h-36 w-auto">
                 <h1 class="flex items-center text-white text-xl pl-3 mx-4">EGCSS</h1>
                 <a href="home_ar.html" class="px-2 py-1 text-bold hover:bg-white hover:text-black rounded-xl">Ar</a>
                 <h1 class="px-1 py-1">|</h1>
                 <a href="index.html" class="px-2 text-bold py-1 hover:bg-white hover:text-black rounded-xl">En</a>
             </div>
-    
+
             <!-- Hamburger Menu (Mobile) -->
             <div class="sm:hidden">
                 <button id="menu-toggle" class="text-white focus:outline-none">
@@ -94,12 +95,12 @@
     <div class="snap-container">
             <!-- Website Image Background -->
     <div class="section relative bg-black">
-        <img src="../Images/ship_stock_img.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
+        <img src="../static/Images/ship_stock_img.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
 
         <!-- Website Logo SVG -->
         <div class="absolute inset-0">
             <div class="mt-12 flex justify-center items-center">
-                <img src="../Images/egcss_logo_2.svg" alt="EGCSS Pictographic Logo">
+                <img src="../static/Images/egcss_logo_2.svg" alt="EGCSS Pictographic Logo">
             </div>
         </div>
     </div>
