--- a/egcss_index.html
+++ b/egcss_index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="png" href="Images/egcss_logo_2
+        <link rel="icon" type="png" href="static/Images/egcss_logo_2
         .svg">
         <style>
             html, body {
@@ -23,12 +23,12 @@
 
     <!-- Website Image Background -->
     <div class="relative bg-black">
-        <img src="Images/ship_stock_img.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
+        <img src="static/Images/ship_stock_img.jpg" class="w-full h-screen opacity-70 object-cover" alt="Shipping Vessal Background Image">
 
         <!-- Website Logo SVG -->
         <div class="absolute inset-0">
             <div class="mt-6 flex justify-center items-center">
-                <img src="Images/egcss_logo_2.svg" alt="EGCSS Pictographic Logo">
+                <img src="static/Images/egcss_logo_2.svg" alt="EGCSS Pictographic Logo">
             </div>
 
             <!-- Links to other branches of EGGCSS and Affliate Companies -->
