--- a/index.html
+++ b/index.html
@@ -575,39 +575,75 @@
                     </div>
                 </div>
 
-    <!-- Image Section - Debug Version -->
-    <div class="lg:w-1/2 relative group min-h-[300px] bg-gray-100/20">
-        <!-- Debug container - remove border styles in production -->
-        <div class="relative overflow-hidden rounded-2xl shadow-2xl hover:shadow-2xl transition-all duration-300 h-full">
-            <!-- Fallback content if image fails to load -->
-            <div class="absolute inset-0 flex items-center justify-center bg-gray-200 text-gray-500">
-                Image: "static/Images/handshake_img.jpg"
-            </div>
-
-            <img
-                class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105"
-                src="static/Images/vessal_5.jpeg"
-                alt="EGCSS Team Handshake"
-                loading="lazy"
-                width="600"
-                height="400"
-                onerror="this.style.display='none'">
-
-            <!-- <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"></div> -->
-        </div>
-
-        <!-- Image Badge -->
-        <div class="absolute -bottom-6 -right-6 bg-white p-4 rounded-xl shadow-xl transform group-hover:-translate-y-2 transition-transform duration-300">
-            <div class="flex flex-col items-center">
-                <div class="text-2xl font-bold text-indigo-900">Since 2007</div>
-                <div class="text-sm font-medium text-indigo-600">Trusted Logistics Partner</div>
-                <div class="absolute -bottom-2 h-1 w-16 bg-indigo-500 rounded-full"></div>
-            </div>
-        </div>
+<!-- Improved Image Section (copy/paste) -->
+<div class="lg:w-1/2 relative group min-h-[300px]">
+    <!-- Outer container to control layout -->
+    <div class="relative overflow-hidden rounded-2xl shadow-2xl transition-all duration-500 h-full min-h-[300px]">
+      <!-- Actual <img> (keeps semantics & accessibility). No onerror hiding. -->
+      <img
+        id="hero-handshake"
+        src="static/Images/handshake_img.jpg"
+        alt="EGCSS Team Handshake"
+        loading="lazy"
+        width="1200" height="800"
+        class="block w-full h-full object-cover transition-transform duration-700 group-hover:scale-105 z-0"
+        style="display:block;"
+      />
+  
+      <!-- Gradient overlay (non-blocking: pointer-events-none) -->
+      <div class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent pointer-events-none z-10"></div>
+  
+      <!-- Text overlay (z above gradient) -->
+      <div class="absolute left-4 bottom-4 z-20 pointer-events-none">
+        <h3 class="text-white text-lg font-semibold">Global Partnerships</h3>
+        <p class="text-sm text-gray-200">Building trust since 2007</p>
+      </div>
     </div>
-            </div>
+  
+    <!-- Floating Badge (z above everything) -->
+    <div class="absolute -bottom-6 -right-6 z-30">
+      <div class="bg-white p-4 rounded-xl shadow-xl transform transition-transform duration-300 group-hover:-translate-y-2">
+        <div class="flex flex-col items-center">
+          <div class="text-2xl font-bold text-indigo-900">Since 2007</div>
+          <div class="text-sm font-medium text-indigo-600">Trusted Logistics Partner</div>
+          <div class="absolute -bottom-2 h-1 w-16 bg-indigo-500 rounded-full"></div>
         </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Debug script: shows console messages if image loads or fails -->
+  <script>
+    (function(){
+      const img = document.getElementById('hero-handshake');
+      if (!img) {
+        console.error('Handshake img element not found in DOM.');
+        return;
+      }
+      // Log load/error
+      img.addEventListener('load', () => console.log('handshake_img.jpg loaded — naturalWidth:', img.naturalWidth, 'naturalHeight:', img.naturalHeight));
+      img.addEventListener('error', () => {
+        console.error('handshake_img.jpg failed to load. URL:', img.src);
+        // Fallback: use background-image on parent (visual fallback)
+        const parent = img.parentElement;
+        if (parent) {
+          parent.style.backgroundImage = "url('static/Images/handshake_img.jpg')";
+          parent.style.backgroundSize = "cover";
+          parent.style.backgroundPosition = "center";
+          // hide the broken <img> so fallback shows
+          img.style.display = 'none';
+        }
+      });
+      // Small sanity: ensure img has display block and visible z-index
+      img.style.display = img.style.display || 'block';
+      img.style.zIndex = img.style.zIndex || '0';
+    })();
+  </script>
+  
     </section>
+
+
+    <img src="static/Images/handshake_img.jpg" class="w-full h-full object-fit" alt="">
 
 
 
